RELEASE VERSION 1.0